Navigation Bar aligns correctly

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -6,5 +6,6 @@
     font-style: normal;
     font-size: 300%;
     color: white;
-    margin-left: 2rem;
+    margin-left: 10px;
 }
+
